Physics And Graphics Development
- Setup SDL2_gfx and SDL2_ttf
- Added Vector Lerp code
- Added example usage code in main
- Created a semi-ui for simulation information

--- a/projectsg-gui/CMakeLists.txt
+++ b/projectsg-gui/CMakeLists.txt
@@ -3,11 +3,17 @@ cmake_minimum_required(VERSION 3.10)
 project(projectsg-gui)
 
 find_package(SDL2 REQUIRED)
+find_package(SDL2_gfx REQUIRED)
+find_package(SDL2_ttf REQUIRED)
 
-add_library(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/projectsg/gui/gui.cpp)
+add_library(${PROJECT_NAME} 
+    ${CMAKE_CURRENT_SOURCE_DIR}/projectsg/gui/gui.cpp
+)
 
 target_link_libraries(${PROJECT_NAME}
     ${SDL2MAIN_LIBRARY}
+    ${SDL2_GFX_LIBRARY}
+    ${SDL2_TTF_LIBRARY}
     ${SDL2_LIBRARY}
     projectsg-physics
 )
